<resources>
  <string name="app_name">Meetings</string>
  <string name="next">NEXT</string>
  <string name="previous">PREV</string>
  <string name="schedule_company_meeting">SCHEDULE COMPANY MEETING</string>
  <string name="separator">-</string>
  <string name="back">BACK</string>
  <string name="schedule_a_meeting">SCHEDULE A MEETING</string>
  <string name="submit">SUBMIT</string>
  <string name="description">Description</string>
  <string name="end_time">End Time</string>
  <string name="start_time">Start Time</string>
  <string name="no_slots_found">No slots found</string>
  <string name="error_msg">Error retrieving slots</string>
</resources>
