<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".schedule.ScheduleActivity">

  <android.support.design.widget.AppBarLayout
    android:id="@+id/app_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      app:contentInsetEnd="0dp"
      app:contentInsetLeft="0dp"
      app:contentInsetRight="0dp"
      app:contentInsetStart="0dp"
      app:popupTheme="@style/AppTheme.PopupOverlay">

      <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
          android:id="@+id/toolbar_back"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:drawableStart="@drawable/ic_keyboard_arrow_left_32dp"
          android:drawableLeft="@drawable/ic_keyboard_arrow_left_32dp"
          android:gravity="center"
          android:text="@string/back"
          android:textColor="@android:color/white"
          android:textSize="16sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:gravity="center"
          android:text="@string/schedule_a_meeting"
          android:textColor="@android:color/white"
          android:textSize="16sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />
      </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.Toolbar>
  </android.support.design.widget.AppBarLayout>

  <TextView
    android:id="@+id/meeting_date"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="16dp"
    android:background="@color/offWhite"
    android:drawableEnd="@drawable/ic_arrow_drop_down_32dp"
    android:drawableRight="@drawable/ic_arrow_drop_down_32dp"
    android:gravity="center_vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    app:layout_constraintTop_toBottomOf="@id/app_bar"
    app:layout_constraintVertical_chainStyle="packed" />

  <TextView
    android:id="@+id/start_time"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="16dp"
    android:background="@color/offWhite"
    android:drawableEnd="@drawable/ic_arrow_drop_down_32dp"
    android:drawableRight="@drawable/ic_arrow_drop_down_32dp"
    android:gravity="center_vertical"
    android:hint="@string/start_time"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    app:layout_constraintTop_toBottomOf="@id/meeting_date" />

  <TextView
    android:id="@+id/end_time"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="16dp"
    android:background="@color/offWhite"
    android:drawableEnd="@drawable/ic_arrow_drop_down_32dp"
    android:drawableRight="@drawable/ic_arrow_drop_down_32dp"
    android:gravity="center_vertical"
    android:hint="@string/end_time"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    app:layout_constraintTop_toBottomOf="@id/start_time" />

  <android.support.v7.widget.AppCompatEditText
    android:id="@+id/description"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_margin="16dp"
    android:background="@android:color/white"
    android:gravity="top"
    android:hint="@string/description"
    android:padding="16dp"
    app:layout_constraintBottom_toTopOf="@id/submit_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/end_time" />

  <android.support.v7.widget.AppCompatButton
    android:id="@+id/submit_button"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@color/colorPrimary"
    android:text="@string/submit"
    android:textColor="@android:color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>